--- a/front-end/webapp/src/app/modules/historia-clinica/modules/guardia/routes/home/home.component.scss
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/guardia/routes/home/home.component.scss
@@ -49,3 +49,16 @@ mat-card-subtitle {
 div.spinner {
 	@include centered-spinner;
 }
+
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+	-webkit-appearance: none;
+	margin: 0;
+}
+input[type="number"] {
+	-moz-appearance: textfield;
+}
+
+.slide-toggle-wrapper {
+	padding: .25em .75em;
+}
