tg-3072 [FE] Restricción de acción 'Finalizar por ausencia' para rol administrativo

--- a/front-end/webapp/src/app/modules/historia-clinica/modules/guardia/routes/home/home.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/guardia/routes/home/home.component.html
@@ -239,11 +239,13 @@
 										{{ 'guardia.home.episodes.episode.actions.atender.TITLE' | translate }}
 									</button>
 
-									<button id="finalizar-ausencia" mat-menu-item
-											*ngIf="episode.state.id === estadosEpisodio.EN_ESPERA"
-											(click)="finalizar(episode.id)">
-										{{ 'guardia.home.episodes.episode.actions.finalizar_ausencia.TITLE' | translate }}
-									</button>
+									<ng-container *hasRole="['ADMINISTRATIVO']" >
+										<button id="finalizar-ausencia" mat-menu-item
+												*ngIf="episode.state.id === estadosEpisodio.EN_ESPERA"
+												(click)="finalizar(episode.id)">
+											{{ 'guardia.home.episodes.episode.actions.finalizar_ausencia.TITLE' | translate }}
+										</button>
+									</ng-container>
 								</mat-menu>
 							</div>
 						</div>
