tg-3148 [P1] Se crean personas duplicadas al clickear varias veces botón "Confirmar"

--- a/front-end/webapp/src/app/modules/pacientes/routes/new-patient/new-patient.component.html
+++ b/front-end/webapp/src/app/modules/pacientes/routes/new-patient/new-patient.component.html
@@ -408,7 +408,7 @@
 				<button mat-stroked-button type="button" (click)="goBack()">
 					<span [translate]="'buttons.BACK'"></span>
 				</button>
-				<button mat-raised-button color="primary" type="submit">
+				<button mat-raised-button color="primary" type="submit" [disabled]="isSubmitButtonDisabled">
 					<span [translate]="'buttons.CONTINUE'"></span>
 				</button>
 			</div>
