--- a/front-end/webapp/src/app/modules/pacientes/routes/new-temporary-patient/new-temporary-patient.component.html
+++ b/front-end/webapp/src/app/modules/pacientes/routes/new-temporary-patient/new-temporary-patient.component.html
@@ -59,7 +59,7 @@
 								name="firstName"
 								formControlName="firstName"
 								placeholder="{{'pacientes.form.FIRST_NAME' | translate}}"
-								maxlength="20"
+							   	[maxLength]="PERSON_MAX_LENGTH.firstName"
 								matInput>
 					</mat-form-field>
 				</div>
@@ -69,7 +69,7 @@
 							name="middleNames"
 							formControlName="middleNames"
 							placeholder="{{'pacientes.form.MIDDLE_NAMES' | translate}}"
-							maxlength="20"
+						   	[maxLength]="PERSON_MAX_LENGTH.middleNames"
 							matInput>
 				</mat-form-field>
 			</div>
@@ -84,7 +84,7 @@
 								name="lastName"
 								formControlName="lastName"
 								placeholder="{{'pacientes.form.LAST_NAME' | translate}}"
-								maxlength="20"
+							   	[maxLength]="PERSON_MAX_LENGTH.lastName"
 								matInput>
 					</mat-form-field>
 					<mat-form-field appearance="outline">
@@ -92,7 +92,7 @@
 								name="otherLastNames"
 								formControlName="otherLastNames"
 								placeholder="{{'pacientes.form.OTHER_LAST_NAMES' | translate}}"
-								maxlength="20"
+							   	[maxLength]="PERSON_MAX_LENGTH.otherLastNames"
 								matInput>
 					</mat-form-field>
 				</div>
@@ -106,7 +106,7 @@
 						name="mothersLastName"
 						formControlName="mothersLastName"
 						placeholder="{{'pacientes.form.MOTHERS_LAST_NAME' | translate}}"
-						maxlength="20"
+					   	[maxLength]="PERSON_MAX_LENGTH.mothersLastName"
 						matInput>
 			</mat-form-field>
 
