--- a/front-end/webapp/src/app/modules/pacientes/routes/search/search.component.html
+++ b/front-end/webapp/src/app/modules/pacientes/routes/search/search.component.html
@@ -67,8 +67,8 @@
 					<mat-form-field appearance="outline">
 						<input  id="firstName"
 								formControlName="firstName"
-								maxlength="20"
 								placeholder="{{'pacientes.form.FIRST_NAME' | translate}}"
+								[maxLength]="PERSON_MAX_LENGHT.MAX_LENGTH.firstName"
 								matInput>
 						<mat-error *ngIf="formSearchSubmitted && hasError(formSearch, 'required', 'firstName')">
 							<span [translate]="'pacientes.form.REQUIRED'"></span>
@@ -77,8 +77,8 @@
 					<mat-form-field appearance="outline">
 						<input  id="middleNames"
 								formControlName="middleNames"
-								maxlength="20"
 								placeholder="{{'pacientes.form.MIDDLE_NAMES' | translate}}"
+								[maxLength]="PERSON_MAX_LENGHT.MAX_LENGTH.middleNames"
 								matInput>
 					</mat-form-field>
 				</div>
@@ -89,8 +89,8 @@
 					<mat-form-field appearance="outline">
 						<input  id="lastName"
 								formControlName="lastName"
-								maxlength="20"
 								placeholder="{{'pacientes.form.LAST_NAME' | translate}}"
+								[maxLength]="PERSON_MAX_LENGHT.MAX_LENGTH.lastName"
 								matInput>
 						<mat-error *ngIf="formSearchSubmitted && hasError(formSearch, 'required', 'lastName')">
 							<span [translate]="'pacientes.form.REQUIRED'"></span>
@@ -98,8 +98,8 @@
 					</mat-form-field>
 					<mat-form-field appearance="outline">
 						<input  id="otherLastNames"
-								maxlength="20"
 								formControlName="otherLastNames"
+								[maxLength]="PERSON_MAX_LENGHT.MAX_LENGTH.otherLastNames"
 								placeholder="{{'pacientes.form.OTHER_LAST_NAMES' | translate}}"
 								matInput>
 					</mat-form-field>
